exploit java unmodifiable lists